--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a class="link" href="https://en.independence-dev.com/aboutme" target="_blank">
             <i class="fas fa-user">&nbsp;</i>About me
           </a>
-        <a class="link" href="https://www.linkedin.com/in/geof-b-3a391923b/" target="_blank">
+        <a class="link" href="https://linkedin.com/in/geoffrey-be/" target="_blank">
             <i class="fab fa-linkedin">&nbsp;</i>Linkedin
           </a>
         <a class="link" href="https://github.com/geof-dev" target="_blank">
