--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
     </div>
 
     <div id="links">
-        <a class="link" href="https://en.independence-dev.com/aboutme" target="_blank">
-            <i class="fas fa-user">&nbsp;</i>About me
+        <a class="link" href="https://www.geof.dev/geof_resume.pdf">
+            <i class="fas fa-user">&nbsp;</i>Download my Resume
           </a>
-        <a class="link" href="https://linkedin.com/in/geof-be/" target="_blank">
+        <a class="link" href="https://linkedin.com/in/geof-be/">
             <i class="fab fa-linkedin">&nbsp;</i>Linkedin
           </a>
-        <a class="link" href="https://github.com/geof-dev" target="_blank">
+        <a class="link" href="https://github.com/geof-dev">
             <i class="fab fa-github">&nbsp;</i>Github
         </a>
-        <a class="link" href="https://www.youtube.com/c/IndependenceDEV" target="_blank">
-            <i class="fab fa-youtube">&nbsp;</i>YouTube
+        <a class="link" href="https://www.youtube.com/c/IndependenceDEV">
+            <i class="fab fa-youtube">&nbsp;</i>My YouTube Channel @IndependenceDEV
         </a>
-        <a class="link" href="https://www.independence-dev.com/" target="_blank">
-            <i class="fas fa-globe">&nbsp;</i>Independence DEV
+        <a class="link" href="https://www.independence-dev.com/">
+            <i class="fas fa-globe">&nbsp;</i>My Website - Independence DEV
         </a>
     </div>
 
